demos/labels-selectors/good/deployment-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labels-selectors-v1
  labels:
    app: labels-selectors
    tier: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labels-selectors
      version: v1
  template:
    metadata:
      labels:
        app: labels-selectors
        tier: frontend
        version: v1
    spec:
      volumes:
        - name: web
          emptyDir: {}
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
