demos/labels-selectors/good/service-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: labels-selectors-v1
spec:
  selector:
    app: labels-selectors
    version: v1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
