demos/labels-selectors/good/service-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: labels-selectors-v2
spec:
  selector:
    app: labels-selectors
    version: v2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
