demos/labels-selectors/good/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labels-selectors
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - labels-selectors-good.k8s.orb.local
      secretName: demo-tls
  rules:
    - host: labels-selectors-good.k8s.orb.local
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: labels-selectors-v1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: labels-selectors-v2
                port:
                  number: 80
